--- a/python3.6/Dockerfile
+++ b/python3.6/Dockerfile
@@ -1,4 +1,5 @@
-FROM python:3.6-alpine3.6
+FROM python:3.6-stretch
+# FROM python:3.6-alpine
 
 ADD provision.sh /tmp/provision.sh
 RUN /tmp/provision.sh
